<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.bestbuy.bbym.ise</groupId>
    <artifactId>drp</artifactId>
    <name>drp</name>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <url>${site.url}</url>

    <modules>
        <module>drp-war</module>
        <module>drp-wicket</module>
        <module>drp-ws-client</module>
        <module>primary-source</module>
        <module>drp-ws-rest</module>
    </modules>

    <distributionManagement>
        <site>
            <id>site-docs</id>
            <url>${site.url}/${project.artifactId}</url>
        </site>
    </distributionManagement>

    <properties>
    	<site.url>file://${env.HOME}/sitedocs/${project.artifactId}</site.url>

        <maven.compiler.source>1.6</maven.compiler.source>
        <maven.compiler.target>1.6</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<plugin.checkstyle.version>2.8</plugin.checkstyle.version>
		<plugin.javadoc.version>2.8.1</plugin.javadoc.version>
		<plugin.site.version>3.0</plugin.site.version>
		<spring.version>3.1.0.RELEASE</spring.version>
		<plugin.surefire.version>2.12</plugin.surefire.version>

		<plugin.jacoco-maven.version>0.5.9.201207300726</plugin.jacoco-maven.version>
		<surefire.jvm.args>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</surefire.jvm.args>

		<maven-checkstyle-plugin.configLocation>/ise_checkstyle.xml</maven-checkstyle-plugin.configLocation>

		<checkstyle.skip>false</checkstyle.skip>
		<javadocs.skip>false</javadocs.skip>
		<jacoco.skip>false</jacoco.skip>
    </properties>

    <build>
    	<pluginManagement>
	        <plugins>
	            <!--This plugin's configuration is used to store Eclipse m2e settings 
    	            only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.googlecode.maven-java-formatter-plugin
										</groupId>
										<artifactId>
											maven-java-formatter-plugin
										</artifactId>
										<versionRange>
											[0.3.1,)
										</versionRange>
										<goals>
											<goal>format</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.jacoco</groupId>
										<artifactId>
											jacoco-maven-plugin
										</artifactId>
										<versionRange>
											[0.5.9.201207300726,)
										</versionRange>
										<goals>
											<goal>prepare-agent</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${plugin.surefire.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${plugin.checkstyle.version}</version>
				</plugin>
	        </plugins>
        </pluginManagement>

		<plugins>
            <plugin>
                <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
                <artifactId>maven-java-formatter-plugin</artifactId>
                <version>0.3.1</version>
                <configuration>
                    <configFile>${project.basedir}/../Code_Format.xml</configFile>
                    <overrideConfigCompilerVersion>true</overrideConfigCompilerVersion>
                    <compilerSource>1.6</compilerSource>
                    <compilerCompliance>1.6</compilerCompliance>
                    <compilerTargetPlatform>1.6</compilerTargetPlatform>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-site-plugin</artifactId>
                <version>${plugin.site.version}</version>
                <configuration>
                    <attach>true</attach>
                    <reportPlugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-checkstyle-plugin</artifactId>
                            <configuration>
                                <skip>${checkstyle.skip}</skip>
                                <configLocation>${maven-checkstyle-plugin.configLocation}</configLocation>
                                <failsOnError>false</failsOnError>
                                <enableRulesSummary>true</enableRulesSummary>
                                <includeTestSourceDirectory>true</includeTestSourceDirectory>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <configuration>
                                <skip>${javadocs.skip}</skip>
                                <failOnError>false</failOnError>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                        </plugin>
                        <plugin>
                            <groupId>org.jacoco</groupId>
                            <artifactId>jacoco-maven-plugin</artifactId>
                            <configuration>
                                <skip>${jacoco.skip}</skip>
                            </configuration>
                        </plugin>
                    </reportPlugins>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-descriptor</id>
                        <goals>
                            <goal>attach-descriptor</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
				<version>${plugin.jacoco-maven.version}</version>
                <configuration>
                    <skip>${jacoco.skip}</skip>
					<destfile>${basedir}/target/coverage-reports/jacoco-unit.exec</destfile>
					<datafile>${basedir}/target/coverage-reports/jacoco-unit.exec</datafile>
                </configuration>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <!-- Do not fail on any JavaDocs error -->
                    <failOnError>false</failOnError>
                    <skip>${javadocs.skip}</skip>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <debug>true</debug>
                    <compilerVersion>${jdk.version}</compilerVersion>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <configuration>
                    <skip>${checkstyle.skip}</skip>
                    <configLocation>${maven-checkstyle-plugin.configLocation}</configLocation>
                    <failsOnError>false</failsOnError>
                    <enableRulesSummary>true</enableRulesSummary>
                </configuration>
                <executions>
                    <execution>
                        <id>run-checkstyle</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>checkstyle</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
		</plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.14</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.6.2</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.6.2</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-oxm</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>3.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>drp-ws-client</artifactId>
            <version>${project.version}</version>
            <type>jar</type>
           
        </dependency>
    </dependencies>

</project>